apps/smart-grid/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    connecthing.io/microservice-uuid: MS_UUID
    davra.com/microservice-uuid: MS_UUID
  name: smart-grid-v1
  namespace: smart-grid
  labels:
    app: smart-grid
    version: v1
    app.kubernetes.io/component: smart-grid
    app.kubernetes.io/instance: smart-grid
    app.kubernetes.io/name: smart-grid
    app.kubernetes.io/part-of: smart-grid-app
    connecthing.io/microservice: "true"
    connecthing.io/microservice-deployment: production
    connecthing.io/tenantId: test2
    davra.com/microservice-UUID: MS_UUID
    davra.com/microservice-deployment-label: production
    davra.com/tenantId: test2
spec:
  replicas: 1
  selector:
    matchLabels:
      davra.com/microservice-UUID: MS_UUID
  template:
    metadata:
      annotations:
        connecthing.io/microservice-uuid: MS_UUID
        davra.com/microservice-uuid: MS_UUID
      labels:
        app: smart-grid
        version: v1
        deployment: smart-grid
        connecthing.io/microservice: "true"
        connecthing.io/tenantId: test2
        davra.com/microservice-UUID: MS_UUID
        davra.com/microservice-deployment-label: production
        davra.com/tenantId: test2
        name: smart-grid-v1
    spec:
      containers:
        - name: smart-grid
          image: davradocker/davra-sample-microservice:1.0.1
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          env: []
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      imagePullSecrets: []
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  paused: false
