apps/smart-grid/base/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: smart-grid
  namespace: smart-grid
spec:
  parentRefs:
  - name: smart-grid-gateway
  rules:
  - backendRefs:
      - name: smart-grid
        port: 8080
