apps/smart-grid/base/httpRouteCanary.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: smart-grid-canary
spec:
  parentRefs:
  - name: smart-grid-gateway
  rules:
  - backendRefs:
      - name: smart-grid-v1
        port: 8080
  - matches:
    - headers:
      - name: traffic
        value: test
    backendRefs:
    - name: smart-grid-v2
      port: 8080
